--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,14 +17,12 @@ en:
   mail_body_reminder_assigned5: "%{count} issues that are assigned to you are due in the next %{days} %{day}:"
   mail_body_reminder_watched5: "%{count} issues that are watched by you are due in the next %{days} %{day}:"
   mail_body_reminder_custom_user5: "%{count} issues in which you are mentioned are due in the next %{days} %{day}:"
-
   label_reminder_options: "Reminder options"
-  label_criteria_task: "Criteria task"
+  label_criteria_task: "Task criteria"
   label_completion_date: "Completion date"
   label_tasks_due_in: "tasks that must be completed in the next"
   label_days: "days"
   label_reminder_recipients: "Reminder recipients"
-
   redmine_reminder:
     issue_statuses:
       all_opened: "all opened tasks"
@@ -35,5 +33,4 @@ en:
     trackers:
       all: "tasks from all trackers"
       explicit: "tasks from selected trackers"
-
   field_custom_user: "User from custom field"
