send_to_groups option Added ability to send to groups of assigned users.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,4 @@ en:
       all: "tasks from all trackers"
       explicit: "tasks from selected trackers"
   field_custom_user: "User from custom field"
+  field_groups: "Groups"
